--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 .header{
     display: flex;
@@ -56,7 +56,11 @@ body{
     padding: 10px 20px;
     border: none;
     outline: none;
+    font-size: inherit;
+    /* font-family: inherit; */
 }
-.search_input .material_icons{
+
+.search_input .material-icons{
     color: gray;
+    cursor: pointer;
 }
